metadatafullcopy/unpackaged/objects/ATI_Job_Custom_Field_History__c.object
<CustomObject>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>ATI_Job__c</referenceTo>
        <relationshipLabel>ATI Job Custom Field History</relationshipLabel>
        <relationshipName>ATI_Job_Custom_Field_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ATI Job Custom Field History</label>
    <nameField>
        <label>ATI Job Custom Field History	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATI Job Custom Field History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>